after ok add discount
